--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,35 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  const playSound = (e) => {
+    // use attribute selector to select data-key
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    // select corresponding key
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    // stop the function from running if no audio element on that key
+    if (!audio) return;
+    // if you hit it in succession, it will rewind to start
+    audio.currentTime = 0;
+    audio.play();
+    // add playing class with different css for playing keys
+    key.classList.add('playing');
+  };
+
+  // remove transition function
+  const removeTransition = (e) => {
+    // skip if property is not transform
+    if (e.propertyName !== 'transform') return;
+    // remove playing class
+    e.classList.remove('playing');
+  }
+
+  // end event
+  const keys = document.querySelectorAll('.key');
+  // event listener on transitionend
+  keys.forEach((key) => {
+    key.addEventListener('transitionend', removeTransition);
+  });
+  window.addEventListener('keydown', playSound);
 
 </script>
 
