--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -21,7 +21,21 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
 
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .h1{
+      color: var(--base);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -45,6 +59,34 @@
   </style>
 
   <script>
+    // const inputs = document.querySelectorAll('.controls input');
+
+    // const handleUpdate = () => {
+    //   // if has a suffix or nothing
+    //   const suffix = this.dataset.sizing || '';
+    //   console.log(this.name);
+    //   // can use variable name
+    //   document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    // }
+
+    // // listen for a change event for each of the inputs
+    // inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    // inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
+
+    const inputs = document.querySelectorAll('.controls input');
+
+      function handleUpdate() {
+        // if has a suffix or nothing
+        const suffix = this.dataset.sizing || '';
+        // an use variable name
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+      }
+
+      // listen for a change event for each of the inputs
+      inputs.forEach(input => input.addEventListener('change', handleUpdate));
+      inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
   </script>
 
 </body>
