local storage and event delegation

--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -28,11 +28,58 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items') || [];
+
+  function addItem(event) {
+    event.preventDefault();
+    // what the user has typed
+    const text = (this.querySelector('[name=item]')).value;
+    const item = {
+      // ES6 shorthand for text = text;
+      text,
+      done: false
+    };
+
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+    this.reset();
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map((plate, index) => {
+      return `
+      <li>
+        <input type="checkbox" data-index=${index} id="item${index}" ${plate.done ? "checked": ""} />
+        <label for="item${index}">${plate.text}</label>
+      </li>
+      `;
+
+    }).join('');
+
+  }
+
+  function toggleDone(event) {
+    // skip unless it's an input
+    if (!event.target.matches('input')) return;
+    const element = event.target;
+    const index = element.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+
+  populateList(items, itemsList);
+
+  const checkBoxes = document.querySelectorAll('input');
+
+  checkBoxes.forEach(input => input.addEventListener('click', () => alert('hi')))
 
 </script>
 
 
 </body>
 </html>
-
